objects/Position__c.object
<CustomObject>
    <description>This object stores information about open job at our company</description>
    <fields>
        <fullName>Apex__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apex</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C__c</fullName>
        <defaultValue>false</defaultValue>
        <label>C#</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Open__c</fullName>
        <description>The number of days a position has been open</description>
        <formula>IF( ISNULL( Close_Date__c ) ,  TODAY()  -  Open_Date__c ,  Close_Date__c  -  Open_Date__c )</formula>
        <label>Days Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Demo__c</fullName>
        <formula>CASE(mid(text( CreatedDate ), 12,2), 
&quot;20&quot;, CreatedDate+ (840/1440), 
&quot;21&quot;,  CreatedDate + (780/1440),
&quot;22&quot;, CreatedDate + (720/1440),
&quot;23&quot;, CreatedDate + (660/1440),
&quot;00&quot;,  CreatedDate + (600/1440),
&quot;01&quot;, CreatedDate + (540/1440),
&quot;02&quot;, CreatedDate+ (480/1440),
&quot;03&quot;,  CreatedDate + (420/1440),
&quot;04&quot;, CreatedDate + (360/1440),
&quot;05&quot;, CreatedDate + (300/1440),
&quot;06&quot;,  CreatedDate + (240/1440),
&quot;07&quot;, CreatedDate + (180/1440),
&quot;08&quot;, CreatedDate + (120/1440),
 CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Demo</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Educational_Requirements__c</fullName>
        <inlineHelpText>What are the educational requirements for the job</inlineHelpText>
        <label>Educational Requirements</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Functional_Area__c</fullName>
        <label>Functional Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>HumanResources</fullName>
                </value>
                <value>
                    <fullName>InformationTechnology</fullName>
                </value>
                <value>
                    <fullName>RetailOperations</fullName>
                </value>
                <value>
                    <fullName>Warehousing</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hire_By__c</fullName>
        <defaultValue>TODAY()  + 90</defaultValue>
        <label>Hire By</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hiring_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hiring Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Positions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Java_Script__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Java Script</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Java__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Java</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Description__c</fullName>
        <inlineHelpText>High level description of job and what it duties are.</inlineHelpText>
        <label>Job Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Job_Level__c</fullName>
        <label>Job Level</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Functional_Area__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>FN-100</fullName>
                </value>
                <value>
                    <fullName>MC-200</fullName>
                </value>
                <value>
                    <fullName>• FN-200</fullName>
                </value>
                <value>
                    <fullName>• FN-300</fullName>
                </value>
                <value>
                    <fullName>• FN-400</fullName>
                </value>
                <value>
                    <fullName>• HR-100</fullName>
                </value>
                <value>
                    <fullName>• HR-200</fullName>
                </value>
                <value>
                    <fullName>• HR-300</fullName>
                </value>
                <value>
                    <fullName>• HR-400</fullName>
                </value>
                <value>
                    <fullName>• IT-100</fullName>
                </value>
                <value>
                    <fullName>• IT-200</fullName>
                </value>
                <value>
                    <fullName>• IT-300</fullName>
                </value>
                <value>
                    <fullName>• IT-400</fullName>
                </value>
                <value>
                    <fullName>• MC-100</fullName>
                </value>
                <value>
                    <fullName>• MC-300</fullName>
                </value>
                <value>
                    <fullName>• MC-400</fullName>
                </value>
                <value>
                    <fullName>• RO-100</fullName>
                </value>
                <value>
                    <fullName>• RO-200</fullName>
                </value>
                <value>
                    <fullName>• RO-300</fullName>
                </value>
                <value>
                    <fullName>• RO-400</fullName>
                </value>
                <value>
                    <fullName>• WH-100</fullName>
                </value>
                <value>
                    <fullName>• WH-200</fullName>
                </value>
                <value>
                    <fullName>• WH-300</fullName>
                </value>
                <value>
                    <fullName>• WH-400</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>San Francisco, CA</fullName>
                    <default>true</default>
                    <label>San Francisco, CA</label>
                </value>
                <value>
                    <fullName>Austin,TX</fullName>
                </value>
                <value>
                    <fullName>Boulder, CO</fullName>
                </value>
                <value>
                    <fullName>London, England</fullName>
                </value>
                <value>
                    <fullName>New York, NY</fullName>
                </value>
                <value>
                    <fullName>Mumbai, India</fullName>
                </value>
                <value>
                    <fullName>Sydney, Australia</fullName>
                </value>
                <value>
                    <fullName>• Tokyo, Japan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MIn_Pay__c</fullName>
        <label>MIn Pay</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Max_Pay__c</fullName>
        <label>Max Pay</label>
        <precision>9</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Open_Date__c</fullName>
        <label>Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Responsibilities__c</fullName>
        <inlineHelpText>Responsibilities of the job</inlineHelpText>
        <label>Responsibilities</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Skills_Required__c</fullName>
        <inlineHelpText>What are the specific skills required for the job</inlineHelpText>
        <label>Skills Required</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Position</fullName>
                    <default>true</default>
                    <label>New Position</label>
                </value>
                <value>
                    <fullName>PendingApproval</fullName>
                </value>
                <value>
                    <fullName>Open -Approved</fullName>
                </value>
                <value>
                    <fullName>Closed -Filled</fullName>
                </value>
                <value>
                    <fullName>Closed - NotApproved</fullName>
                </value>
                <value>
                    <fullName>Closed -Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TEST_ARUN__c</fullName>
        <formula>LEFT( $Api.Enterprise_Server_URL_25 , FIND(&apos;/&apos;, $Api.Enterprise_Server_URL_25&amp;Id, 9) ) + Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TEST-ARUN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <label>Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Travel_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Travel Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full Time</fullName>
                </value>
                <value>
                    <fullName>Part Time</fullName>
                </value>
                <value>
                    <fullName>Internship</fullName>
                </value>
                <value>
                    <fullName>Contractor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <formula>$User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>test_int__c</fullName>
        <label>test_int</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Position</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Position Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Positions</pluralLabel>
    <recordTypes>
        <fullName>IT_Position</fullName>
        <active>true</active>
        <description>Record type for all IT positions.</description>
        <label>IT Position</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard_Position</fullName>
        <active>true</active>
        <description>Record type for all non-IT positions.</description>
        <label>Standard Position</label>
    </recordTypes>
    <recordTypes>
        <fullName>TEST_POSITION</fullName>
        <active>true</active>
        <label>TEST POSITION</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <sharingReasons>
        <fullName>tedt__c</fullName>
        <label>tedt</label>
    </sharingReasons>
    <validationRules>
        <fullName>Close_Date_Rule</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
 ISNULL( Close_Date__c ) ,
 OR(
 ISPICKVAL( Status__c , &quot;Close-Filled&quot;) ,
 ISPICKVAL( Status__c , &quot;Close-NotApproved&quot;) )
 )</errorConditionFormula>
        <errorDisplayField>Close_Date__c</errorDisplayField>
        <errorMessage>Close Date must be specified when
Status is set to &apos;Closed.&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Close_Date_Rules</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Close_Date__c )  &amp;&amp; ( ISPICKVAL( Status__c , &quot;Closed -Filled&quot;)  ||  ISPICKVAL( Status__c , &quot;Closed - NotApproved&quot;) )</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Close Date should have a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Min_Pay_Rule</fullName>
        <active>false</active>
        <errorConditionFormula>MIn_Pay__c  &gt;  Max_Pay__c</errorConditionFormula>
        <errorDisplayField>MIn_Pay__c</errorDisplayField>
        <errorMessage>Min Pay cannot exceed Max Pay</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Min_Pay_less_t_o_Max_pay</fullName>
        <active>true</active>
        <errorConditionFormula>MIn_Pay__c  &gt;  Max_Pay__c</errorConditionFormula>
        <errorDisplayField>MIn_Pay__c</errorDisplayField>
        <errorMessage>Minimum pay should not be greater to Max pay</errorMessage>
    </validationRules>
</CustomObject>